# mynes

./: CHANGES  INSTALL  README.md
libstmm-mynes/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-mynes-defs.cmake  stmm-mynes.pc.in
libstmm-mynes-xml/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-mynes-xml-defs.cmake  stmm-mynes-xml.pc.in
libstmm-mynes-xml/data/themes/mynes/simple_m.thm/: theme.xml
libstmm-mynes-xml/doc/: CMakeLists.txt
libstmm-mynes-xml/include/stmm-mynes-xml/: stmm-mynes-xml-config.h  xmlfillerevent.h  xmlmynesevent.h  xmlpressevent.h  xmlsonarevent.h  xmlsquarsorevent.h
libstmm-mynes-xml/scripts/: install_libstmm-mynes-xml.py  uninstall_libstmm-mynes-xml.py
libstmm-mynes-xml/src/: stmm-mynes-xml-config.cc.in  xmlfillerevent.cc  xmlmynesevent.cc  xmlpressevent.cc  xmlsonarevent.cc  xmlsquarsorevent.cc
libstmm-mynes-xml/test/: CMakeLists.txt
libstmm-mynes/doc/: CMakeLists.txt
libstmm-mynes/include/stmm-mynes/: fillerevent.h  mynesevent.h  pressevent.h  sonarblock.h  sonarevent.h  squarsorevent.h  stmm-mynes-config.h
libstmm-mynes/scripts/: install_libstmm-mynes.py  uninstall_libstmm-mynes.py
libstmm-mynes/src/: fillerevent.cc  mynesevent.cc  pressevent.cc  sonarblock.cc  sonarevent.cc  squarsorevent.cc  stmm-mynes-config.cc.in
libstmm-mynes/test/: CMakeLists.txt  testFillerEvent.cxx
mynes/: CMakeLists.txt  INSTALL  NEWS  README.md  mynes-defs.cmake
mynes/data/applications/: com.efanomars.mynes.desktop
mynes/data/games/mynes/: classic-big.xml  classic-medium.xml  classic-small.xml  classic2-huge.xml  rolling.xml  rolling2.xml
mynes/scripts/: install_mynes.py  uninstall_mynes.py
mynes/src/: binconfig.h  main.cc  setup.cc  setup.h  setupstdconfig.cc  setupstdconfig.h  setupxmlgameloader.cc  setupxmlgameloader.h  setupxmlthemeloader.cc  setupxmlthemeloader.h
mynes/test/: CMakeLists.txt  testLoadGames.cxx  testconfig.cc.in  testconfig.h
scripts/: arch_create.py  debian_create.py  install_mynes-all.py  sourcepackage.py  testall.py  uninstall_mynes-all.py
scripts/priv/: checktidy.py  dd_install_mynes-all.py  debian_src_versions.cmake  pk_install_mynes-all.py
scripts/priv/arch.orig/: PKGBUILD.in
scripts/priv/debian.orig/: changelog.in  control.in  copyright  libstmm-mynes-dev.install  libstmm-mynes-xml-dev.install  libstmm-mynes-xml@STMM_MYNES_XML_MAJOR_VERSION@.install.in  libstmm-mynes-xml@STMM_MYNES_XML_MAJOR_VERSION@.shlibs.in  libstmm-mynes@STMM_MYNES_MAJOR_VERSION@.install.in  libstmm-mynes@STMM_MYNES_MAJOR_VERSION@.shlibs.in  mynes.1  mynes.install  mynes.manpages  rules
share/cmake/: CommonTesting.cmake
